# search-engine

./: .gitignore  .gitmodules  Cargo.toml  README.md  flake.nix  options.toml  shell.nix
src/: algorithms.rs  app.py  build.rs  common.py  errors.rs  main.rs  options.py  options.rs  preflight.py  routes.rs
src/algorithms/: bm25.py  bm25l.rs  entries.py  entries.rs  fuzzy.py  fuzzy.rs
src/protos/: crawled.proto  crawled_pb2.py
src/protos_raw/: crawled.proto
src/routes/: rejections.rs  search.rs
src/templates/: index.html
src/web/: .eslintrc.cjs  crawled.js  index.html  package-lock.json  package.json
src/web/src/: App.svelte  Pages.svelte
src/web/src/lib/: SearchResult.svelte
templates/: base.html  search-results.html  search.html
