[package]
name = "search-engine"
version = "0.1.0"
edition = "2021"
build = "src/build.rs"

[dependencies]
askama = "0.12.1"
bincode = "1.3.3"
eyre = "0.6.12"
once_cell = "1.19.0"
pbr = "1.1.1"
prost = "0.13.1"
prost-types = "0.13.1"
serde = { version = "1.0.204", features = ["derive"] }
sha1 = "0.10.6"
tokio = { version = "1.38.1", features = ["full"] }
toml = "0.8.14"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
walkdir = "2.5.0"
warp = "0.3.7"

[build-dependencies]
prost-build = "0.13.1"
